--- a/src/Components/FoodItem/FoodItem.css
+++ b/src/Components/FoodItem/FoodItem.css
@@ -57,3 +57,19 @@
     cursor: pointer;
     border-radius: 50%;
 }
+
+.food-item-counter{
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 6px;
+    border-radius: 50px;
+    background-color: white;
+}
+
+.food-item-counter img{
+    width: 30px;
+}
