--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -34,10 +34,11 @@
 }
 
 .footer-social-icon img{
-    width: 100px;
+    width: 45px;
     margin-right: 15px;
 }
 
+ 
 .logo{
     width: 50px;
 }
@@ -48,4 +49,17 @@
     margin: 20px 0;
     background-color: grey;
     border: none;
+}
+
+@media (max-width:750px) {
+     .footer-content{
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+     }
+
+     .footer-copy-right{
+        text-align: center;
+     }
+    
 }
