--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  scroll-behavior: smooth;
 }
 body{
   min-height: 100vh;
