Added the payment for mobile responsiveness

--- a/src/pages/PlaceOrder/PlaceOrder.css
+++ b/src/pages/PlaceOrder/PlaceOrder.css
@@ -39,3 +39,26 @@
     margin-top: 30px;
 }
 
+@media (max-width: 750px) {
+    .place-order {
+      flex-direction: column;
+      padding: 10px;
+    }
+  
+    .place-order-left,
+    .place-order-right {
+      width: 100%;
+    }
+  
+    .multi-fields {
+      flex-direction: column;
+    }
+  
+    .multi-fields input {
+      width: 100%;
+    }
+  
+    button {
+      width: 100%;
+    }
+  }
